Adicionadas testes de design CSS com tipografia e textos animados

--- a/bandoleiros/templates/master.html
+++ b/bandoleiros/templates/master.html
@@ -12,12 +12,16 @@
         <ul>
             <li><a href="/admin/">Admin</a></li>
             <li><a href="/">Justiça</a></li>
-            <li><a href="/pers/">Personagens</a></li>
+            <li><a href="/tipografia/">Tipografia</a></li>
+            <li><a href="/personagens/">Personagens</a></li>
         </ul>
     </div>
     {% block banner %}{% endblock %}
     <nav>
     {% block conteudo %}{% endblock %}
     </nav>
+    <footer>
+        Ewerton Bramos - 2023
+    </footer>
 </body>
 </html>
